# booster-t1-mjlab

./: .gitignore  MUJOCO_LOG.TXT  main.py  modules.txt  pyproject.toml  test_env.py  train.py  verify_init.py
assets/booster_t1/: field.xml  t1.xml
logs/PPO_1/: events.out.tfevents.1770923227.pop-os.11435.0
logs/PPO_2/: events.out.tfevents.1770923545.pop-os.13913.0
logs/PPO_3/: events.out.tfevents.1770923848.pop-os.15470.0
logs/PPO_4/: events.out.tfevents.1770926420.pop-os.23028.0
logs/PPO_5/: events.out.tfevents.1770926491.pop-os.23807.0
mjlab_task/: __init__.py  env_cfg.py  getup_env.py  getup_mdp.py  reach_env.py  reach_mdp.py  rl_cfg.py  robot_cfg.py  runner_with_video.py  stand_env.py  stand_mdp.py
wandb/: latest-run
wandb/offline-run-20260212_170017-rxo0pvtl/: run-rxo0pvtl.wandb
wandb/offline-run-20260212_170017-rxo0pvtl/files/: requirements.txt
wandb/run-20260212_170118-yh5b0spc/: run-yh5b0spc.wandb
wandb/run-20260212_170118-yh5b0spc/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20260213_004443-v0tvwlv9/: run-v0tvwlv9.wandb
wandb/run-20260213_004443-v0tvwlv9/files/: config.yaml  wandb-metadata.json
wandb/run-20260213_004557-u5tgpgue/: run-u5tgpgue.wandb
wandb/run-20260213_004557-u5tgpgue/files/: config.yaml  wandb-metadata.json
wandb/run-20260213_004647-9tw64czw/: run-9tw64czw.wandb
wandb/run-20260213_004647-9tw64czw/files/: 2026-02-13_00-46-44.onnx  config.yaml  model_0.pt  model_100.pt  model_150.pt  model_200.pt  model_250.pt  model_300.pt  model_350.pt  model_400.pt  model_50.pt  (+3 more)
(+38 files in other folders)
